kubernetes/overlays/istio/destinationrules/api-gateway-dr.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: api-gateway-dr
  namespace: digital-bank
spec:
  host: api-gateway
  trafficPolicy:
    connectionPool:
      tcp:
        maxConnections: 20
      http:
        http1MaxPendingRequests: 20
        maxRequestsPerConnection: 5
    loadBalancer:
      simple: LEAST_CONN
